<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:validate="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="@string/key_ms_smoothing_settings"
        android:title="@string/ms_smoothing_settings"
        app:initialExpandedChildrenCount="0">

        <app.aaps.core.validators.ValidatingEditTextPreference
            android:defaultValue="0.4"
            android:dialogMessage="@string/noise_gain_summary"
            android:inputType="numberDecimal"
            android:key="@string/key_noise_gain"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/noise_gain"
            validate:floatmaxNumber="1.0"
            validate:floatminNumber="0.01"
            validate:testType="floatNumericRange" />

        <app.aaps.core.validators.ValidatingEditTextPreference
            android:defaultValue="10"
            android:dialogMessage="@string/filter_degree_summary"
            android:digits="0123456789.,"
            android:inputType="number"
            android:key="@string/key_filter_degree"
            android:maxLines="20"
            android:selectAllOnFocus="true"
            android:title="@string/filter_degree"
            validate:maxNumber="10"
            validate:minNumber="2"
            validate:testType="numericRange" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>